force-app/main/default/objects/EnvSettings__c/EnvSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Env Settings</label>
</CustomObject>