force-app/main/default/objects/EnvSettings__c/fields/CreateBillingAccountYES__c.field-meta.xml
<CustomField>
    <fullName>CreateBillingAccountYES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Billing Account YES</label>
    <type>Checkbox</type>
</CustomField>