force-app/main/default/objects/EnvSettings__c/fields/Env__c.field-meta.xml
<CustomField>
    <fullName>Env__c</fullName>
    <label>Env</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>