force-app/main/default/objects/EnvSettings__c/fields/Run_Capacity_In_Get_Slots__c.field-meta.xml
<CustomField>
    <fullName>Run_Capacity_In_Get_Slots__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Capacity in Get Slots</label>
    <type>Checkbox</type>
</CustomField>